Updates in v0.7.2
TYPES:
1. CorrData.subset() changed overwrite to False by default.

==================================================================
Changes in v0.7.0
STACKING:
1. Added clusterstack() and tfpws().

MONITORING:
1. Added option to specify file name when saving to *.h5 file.

==================================================================
Updates in v0.6.6
MONITORING:
1. Fixed a bug in single cpu mode, where the positive side was used for the negative measurements.

STACKING:
1. Cleaned up stacking methods with simpler names with a consistent fashion
2. Added seisstack() as a wrapper/interface to call all methods.

TYPES:
1. CorrData.to_egf(): Added a statement to check whether the data is already EGFs.
2. CorrData.stack(): demean is now an option. ampcut can be turned off now. This is to
    consider situations when all data need to be stacked and/or the overall trend needs to be preserved.
3. Simplified calling stacking through seisstack. this enables easier future development.

NOISE:
1. Simplified calling stacking through seisstack. this enables easier future development.

UTILS:
1. Added get_snr() to get snr of data with distance information.
2. Added rms() to get the rms of data.
3. Fixed a bug in psd() to return half of the PSD and the corresponding frequency vector.

==================================================================
Updates in v0.6.5
SETUP:
1. Added requirements for tslearn and minisom mainly for the clustering module .

CLUSTERING:
1. Added the new module.
2. Added clustering of velocity depth profiles with kmean and som, in two functions.

PLOTTING:
1. Added get_color_cycle() to help assign colors in plotting using matplotlib.
2. Cleaned up unused old NOISEPY functions.
3. Function to plot vmodel clustering results.

NOISE:
1. Optimized merge_chunks() to use less time getting the time range.

UTILS:
1. Added option to use pattern in get_filelist().

==================================================================